--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.5.2",
     "antd": "^5.11.0",
     "axios": "^1.6.1",
     "next": "14.0.1",
+    "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-select": "^5.8.0",
+    "sonner": "^1.2.0",
+    "sweetalert2": "^11.9.0",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
   },
@@ -32,6 +39,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
