--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.5.2",
     "antd": "^5.11.0",
     "axios": "^1.6.1",
+    "moment": "^2.29.4",
     "next": "14.0.1",
     "prisma": "^5.5.2",
     "react": "^18",
