--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
+    "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
